# axolo

./: .gitignore  CLAUDE.md  README.md  config.yaml  profiles.sample.yaml  pyproject.toml  timeline.csv  timeline.html
src/axolo/: __main__.py  cli.py  config.py  duplicates.py  journal.py  lens_pairing.py  logging_setup.py  media_scanner.py  metadata.py  organizer.py  parallel.py  sync.py  templates.py  tui.py
src/axolo/commands/: __init__.py  _shared.py  duplicates.py  run.py  sync_cmd.py  tui_cmd.py  undo.py
src/media_organizer/: cli.py  clustering.py  config.py  duplicates.py  i18n.py  journal.py  lens_pairing.py  logging_setup.py  metadata.py  organizer.py  similarity.py  sync.py  templates.py  timeline.py  tui.py
src/media_organizer/commands/: __init__.py  _shared.py  duplicates.py  run.py  sync_cmd.py  tui_cmd.py  undo.py
tests/: conftest.py  test_cli_cluster.py  test_cli_reports.py  test_clustering.py  test_config.py  test_coverage_boost.py  test_duplicates.py  test_lens_pairing.py  test_metadata_coverage.py  test_metadata_example_files.py  test_metadata_insta360.py  test_metadata_types.py  test_organizer.py  test_phase1.py  test_phase2.py  test_phase5.py  test_similarity.py  test_sync.py  test_templates.py  test_timeline.py  test_tui.py
tests/data/: profiles.yaml
