[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-organizer"
version = "0.1.0"
description = "Automatic media organizer for photos, videos, audio and documents with configurable templates."
authors = [
  { name = "Media Organizer Team" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.9,<1.0",
  "Pillow==10.1.0",
  "pillow-heif==0.14.0",
  "python-dateutil>=2.8",
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "mutagen>=1.46",
  "pypdf>=4.0",
  "numpy>=1.24,<2.0",
  "scikit-learn>=1.3,<1.5",
  "ImageHash>=4.3,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
cluster = [
  "numpy>=1.24,<2.0",
  "scikit-learn>=1.3,<1.5",
]

[project.scripts]
media-organizer = "media_organizer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
