[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axolo-data"
version = "0.1.0"
description = "Axolo Data — regenera el orden de tus archivos multimedia con plantillas configurables."
authors = [
  { name = "Axolo Data" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.9,<1.0",
  "rich>=13",
  "Pillow==10.1.0",
  "pillow-heif==0.14.0",
  "python-dateutil>=2.8",
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "mutagen>=1.46",
  "pypdf>=4.0",
  "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
axolo = "axolo.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
